--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack ---entry ./index.js --output ./bundle.js --mode development",
+    "build:local": "webpack --mode production",
+    "build:external": "webpack --config  ./external/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,3 +16,5 @@
     "webpack-cli": "3.3.2"
   }
 }
+
+
