--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:plugin": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js --open",
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --open",
-    "build:react": "webpack-dev-server --config ./react/webpack.config.js --open"
+    "build:react": "webpack-dev-server --config ./react/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
